k8s/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec: 
  ingressClassName: nginx
  tls:
    - hosts:
        - cloudking.fun
      secretName: cloudking-fun-tls
  
  rules: 
    - host: cloudking.fun 
      http: 
        paths: 
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: frontend-svc 
                port: 
                  number: 80 
          - path: /api 
            pathType: Prefix 
            backend: 
              service: 
                name: backend-svc 
                port: 
                  number: 8080
